--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,9 @@ Temporary Items
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
+## PlayGround
+contents.xcplayground
+
 ## User settings
 xcuserdata/
 
