Update .gitignore for CoreML proj

--- a/.gitignore
+++ b/.gitignore
@@ -132,4 +132,7 @@ MyNetflix/MyNetflix/GoogleService-Info.plist
 
 # Firebase101
 Firebase101/Firebase101/GoogleService-Info.plist
+
+# CoreML
+CoreML/image
 # End of https://www.toptal.com/developers/gitignore/api/swift
